service 디자인수정

--- a/service.html
+++ b/service.html
@@ -78,7 +78,7 @@
             </div>
         </header>
         <section class="row w-100 d-flex justify-content-end box" id="section1" style="background-image: url(/img/service_content_img_1.png);">
-            <div class="col-xl-3  d-flex box">
+            <div class="col-xl-3  d-flex box" style="background: #0000006e;">
                 <div class="txt text-start w-100 position-relative d-flex flex-column align-items-center align-items-xl-start aniview"  data-av-animation="animate__backInRight" style="top: 24%;">
                     <div class="mb-5">
                         <svg class="w-100" style="max-width:100%;" xmlns="http://www.w3.org/2000/svg" width="318.251" height="52.767" view="0 0 318.251 52.767">
